--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^8.9.0",
     "moment": "^2.29.1",
+    "node-cron": "^3.0.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.14.0"
   }
