--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "firebase": "^8.9.0",
     "moment": "^2.29.1",
     "node-cron": "^3.0.0",
